# moe-shaping

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
configs/: default.yaml  fixed_imbalanced_target.yaml  fixed_inbalanced_target_correct_experts.yaml  fixed_initialization.yaml  fixed_target.yaml  fixed_target_correct_experts.yaml  fixed_target_correct_router.yaml  fixed_target_router.yaml  large.yaml
configs/sweeps/: auxiliary_loss_free_load_balancing.yaml  auxiliary_loss_free_load_balancing_bias_collapse.yaml  load_balancing_loss.yaml  no_load_balancing.yaml
lm/: .gitignore  README.md  alps3.toml  config.sh.example  launch.sh
lm/patches/: 0002-bilevel-alternation.patch  0003-log-expert-imbalance.patch  0004-log-expert-load.patch  0005-log-num-parameters-to-wandb.patch  0006-moe-router-expert-bias-args.patch
src/: main.py  models.py  targets.py  utils.py  visualization.py
