[project]
name = "moe-shaping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "numpy>=2.4.3",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "wandb>=0.25.1",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]
